# example-apache-beam-slack-export-to-bigquery

./: README.md  main.py  pyproject.toml
