[tool.poetry]
name = "example-apache-beam-slack-export-to-bigquery"
version = "0.1.0"
description = ""
authors = ["Hironao OTSUBO <motemen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "example_apache_beam_slack_export_to_bigquery"}]

[tool.poetry.dependencies]
python = "^3.10"
apache-beam = {extras = ["gcp"], version = "^2.53.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
